# spdf

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  TODO.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  pages.yml  release.yml
benchmark/: .fixtureignore  run.sh  spatial.py  update_readme.py
benchmark/outputs/lite/: example-1.txt  irs-f1040.txt  irs-fw9-p1-2.txt  nist-sp-800-53r5-p1-2.txt  nist-sp-800-63b-p1-2.txt  rfc8446-p1-2.txt  rfc9110-p1-2.txt  test-ocr.txt
benchmark/outputs/spdf/: example-1.txt  irs-f1040.txt  irs-fw9-p1-2.txt  nist-sp-800-53r5-p1-2.txt  nist-sp-800-63b-p1-2.txt  rfc8446-p1-2.txt  rfc9110-p1-2.txt  test-ocr.txt
benchmark/outputs/tesseract/: example-1.txt  irs-f1040.txt  irs-fw9-p1-2.txt  nist-sp-800-53r5-p1-2.txt  nist-sp-800-63b-p1-2.txt  rfc8446-p1-2.txt  rfc9110-p1-2.txt  test-ocr.txt
benchmark/results/: spatial.json  spatial.md  summary.json  summary.md
crates/spdf-cli/: Cargo.toml
crates/spdf-cli/src/: main.rs
crates/spdf-convert/: Cargo.toml
crates/spdf-convert/src/: lib.rs
crates/spdf-core/: Cargo.toml
crates/spdf-core/src/: lib.rs
crates/spdf-core/tests/: adversarial.rs  guards.rs
crates/spdf-ffi/: Cargo.toml
crates/spdf-ffi/src/: lib.rs
crates/spdf-ocr/: Cargo.toml
crates/spdf-ocr/src/: engine.rs  http.rs  lib.rs  tesseract_engine.rs
crates/spdf-output/: Cargo.toml
crates/spdf-output/src/: lib.rs
crates/spdf-pdf/: Cargo.toml  build.rs
crates/spdf-pdf/src/: engine.rs  lib.rs  pdfium_engine.rs
crates/spdf-processing/: Cargo.toml
crates/spdf-processing/src/: bbox.rs  clean_text.rs  lib.rs  markup.rs  ocr_utils.rs  search.rs  tables.rs  text_utils.rs
crates/spdf-projection/: Cargo.toml
crates/spdf-projection/src/: lib.rs
crates/spdf-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/spdf-py/src/: lib.rs
crates/spdf-types/: Cargo.toml
crates/spdf-types/src/: config.rs  error.rs  input.rs  lib.rs  text.rs
example/corpus/: README.md
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: parse_pdf.rs  project_grid.rs
tests/batch-out/: hello.json
tests/parity/: compare.py
website/: benchmark.js  benchmark.json  index.html  spatial.json  styles.css  typewriter.js
xtask/: Cargo.toml
xtask/src/: main.rs
