[package]
name = "spdf-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }
arbitrary = { version = "1", features = ["derive"] }
spdf-core = { path = "../crates/spdf-core" }
spdf-types = { path = "../crates/spdf-types" }
spdf-processing = { path = "../crates/spdf-processing" }
spdf-projection = { path = "../crates/spdf-projection" }

[[bin]]
name = "parse_pdf"
path = "fuzz_targets/parse_pdf.rs"
test = false
doc = false

[[bin]]
name = "project_grid"
path = "fuzz_targets/project_grid.rs"
test = false
doc = false

# Opt out of the cargo workspace so `cargo fuzz` manages this crate on its own.
[workspace]
