[package]
name = "spdf-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "spdf command-line interface."

[[bin]]
name = "spdf"
path = "src/main.rs"

[dependencies]
spdf-core.workspace = true
spdf-types.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true
