[package]
name = "spdf-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "spdf command-line interface."

[[bin]]
name = "spdf"
path = "src/main.rs"

[dependencies]
spdf-core.workspace = true
spdf-types.workspace = true
spdf-output.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = []
# Enable Tesseract-backed local OCR. Requires system libtesseract +
# libleptonica (e.g. `apt install libtesseract-dev libleptonica-dev`).
tesseract = ["spdf-core/tesseract"]
