[package]
name = "spdf-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "Orchestrator for the spdf pipeline."

[dependencies]
spdf-types.workspace = true
spdf-pdf.workspace = true
spdf-ocr = { workspace = true, features = ["http"] }
spdf-projection.workspace = true
spdf-processing.workspace = true
spdf-convert.workspace = true
spdf-output.workspace = true
tracing.workspace = true
rayon.workspace = true
serde_json.workspace = true
tempfile.workspace = true
flate2.workspace = true

[features]
default = []
tesseract = ["spdf-ocr/tesseract"]
