[package]
name = "spdf-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "C-ABI bindings for spdf — experimental, unstable ABI."
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
spdf-core = { workspace = true }
spdf-types = { workspace = true }
spdf-output = { workspace = true }
serde_json = { workspace = true }
