[package]
name = "spdf-ocr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "OCR engine trait + HTTP and Tesseract implementations."

[dependencies]
spdf-types.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tesseract = { workspace = true, optional = true }

[features]
default = ["http"]
http = ["dep:reqwest", "dep:tokio"]
tesseract = ["dep:tesseract"]
