[package]
name = "spdf-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "JSON and text output formatters."

[dependencies]
spdf-types.workspace = true
serde.workspace = true
serde_json.workspace = true
