[package]
name = "spdf-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PdfEngine trait + PDFium-backed implementation."

[dependencies]
spdf-types.workspace = true
tracing.workspace = true
pdfium-render.workspace = true
image.workspace = true
thiserror.workspace = true

[features]
default = ["pdfium"]
pdfium = []
