[package]
name = "spdf-pdf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "PdfEngine trait + PDFium-backed implementation."

[package.metadata.docs.rs]
# docs.rs has no network access; skip the bundled-pdfium download.
no-default-features = true
features = ["pdfium"]

[dependencies]
spdf-types.workspace = true
tracing.workspace = true
pdfium-render.workspace = true
image.workspace = true
thiserror.workspace = true

[build-dependencies]
ureq = { version = "2.12", features = ["tls"] }
flate2 = "1.1.9"
tar = "0.4"

[features]
default = ["pdfium", "bundled-pdfium"]
pdfium = []
# Download and embed libpdfium at build time so the resulting binary is
# self-contained. Disable (with `--no-default-features --features pdfium`) for
# smaller builds that rely on a system/xtask-provided pdfium.
bundled-pdfium = []
