[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "spdf"
version = "0.2.0a2"
description = "Fast, spatially-precise PDF parsing — Python bindings for spdf"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["pdf", "ocr", "parsing", "text-extraction", "layout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
]
authors = [{ name = "spdf contributors" }]

[project.urls]
Repository = "https://github.com/Fanaperana/spdf"
Homepage = "https://github.com/Fanaperana/spdf"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "spdf"
bindings = "pyo3"
